app/styles/buttons.less
button,
.button {
  .transition;

  &:focus, &:visited {
    outline: none;
  }
}

.button--action {
  background-color: @teal-bright;
  color: @white;

  &:hover {
    background-color: lighten(@teal-bright, 4%);
  }

  &:focus {
    background-color: @teal-bright;
  }
}

.button--trans {
  background: transparent;
  color: @grey;

  .fa {
    color: @grey;
    .transition;
  }

  &:hover, &:focus {
    color: @navy;
    background: transparent;

    .fa {
      color: @navy;
    }
  }
}

.button--semi-opac {
  background: rgba(255, 255, 255, .1);

  &:hover {
    background: rgba(255, 255, 255, .14);
  }

  &:focus {
    background: rgba(255, 255, 255, .1);
  }
}

.button--100 {
  width: 100%;
}

.icon-btn {
  font-size: 14px;
  cursor: pointer;
  margin-left: 10px;
  .icon-hover;

  &:first-child {
    margin-left: inherit;
  }
}

.icon-btn--sm {
  font-size: 13px;
}

.icon-btn--lg {
  font-size: 15px;
}

.back-arrow {
  font-size: 16px;
  margin-right: 20px;
  .transition;
}

.back-arrow--light {
  color: @grey;

  &:hover {
    color: @white;
  }
}

.button-container {
  display: flex;
  justify-content: center;
  align-content: center;
}

.button--twitch, .button--yt {
  width: 48%;
}

.square-button {
  .radius;
  .transition;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50px;
  height: 50px;
  color: @white;
  font-size: 16px;
}

.square-button--twitch, .button--twitch {
  background: #6441A4;

  &:hover {
    background: lighten(#6441A4, 4%);
  }

  &:focus {
    background: #6441A4;
  }
}

.square-button--yt,
.button--yt {
  background: #D22222;

  &:hover {
    background: lighten(#D22222, 4%);
  }

  &:focus {
    background: #D22222;
  }
}

.square-button--fb {
  background: #3B5998;

  &:hover {
    background: lighten(#3B5998, 4%);
  }
}
.square-button--twitter {
  background: #1DA1F2;

  &:hover {
    background: lighten(#1DA1F2, 4%)
  }
}

.button--soft-warning {
  color: @red;
  border-color: rgba(251,72,76,.3);
  background: rgba(251,72,76,.08);

  &:focus {
    color: @red;
    border-color: rgba(251,72,76,.3);
    background: rgba(251,72,76,.08);
  }

  &:hover {
    border-color: rgba(251,72,76,.4);
    background: rgba(251,72,76,.12);
    color: @red;
  }
}

.square-button--mixer {
  background: #00BBF2;

  &:hover {
    background: lighten(#00BBF2,4%)
  }
}

.night-theme {
  .button--trans {
    color: @night-link;

    &:hover {
      color: @white;
    }
  }

  .button--default {
    background: rgba(255, 255, 255, .1);
    border-color: transparent;
    color: @white;
  }
}

